--- a/D2D-AliceEngine/Engine/Engine.vcxproj
+++ b/D2D-AliceEngine/Engine/Engine.vcxproj
@@ -198,8 +198,8 @@
     <ClInclude Include="Manager\TimerManager.h" />
     <ClInclude Include="Animation\TextureLoader.h" />
     <ClInclude Include="Object\UObjectBase.h" />
-    <ClInclude Include="Manager\UIManager.h" />
     <ClInclude Include="Component\UIComponent.h" />
+    <ClInclude Include="Object\Canvas.h" />
     <ClInclude Include="UI\UIText.h" />
     <ClInclude Include="UI\UIImage.h" />
   </ItemGroup>
@@ -265,8 +265,8 @@
     <ClCompile Include="Manager\TimerManager.cpp" />
     <ClCompile Include="Animation\TextureLoader.cpp" />
     <ClCompile Include="Object\UObjectBase.cpp" />
-    <ClCompile Include="Manager\UIManager.cpp" />
     <ClCompile Include="Component\UIComponent.cpp" />
+    <ClCompile Include="Object\Canvas.cpp" />
     <ClCompile Include="UI\UIText.cpp" />
     <ClCompile Include="UI\UIImage.cpp" />
   </ItemGroup>
