--- a/D2D-AliceEngine/Engine/Engine.vcxproj
+++ b/D2D-AliceEngine/Engine/Engine.vcxproj
@@ -205,6 +205,7 @@
     <ClInclude Include="TileMap\TileMapComponent.h" />
     <ClInclude Include="Component\UIComponent.h" />
     <ClInclude Include="Object\Canvas.h" />
+    <ClInclude Include="UI\UIButton.h" />
     <ClInclude Include="UI\UIText.h" />
     <ClInclude Include="UI\UIImage.h" />
   </ItemGroup>
@@ -277,6 +278,7 @@
     <ClCompile Include="TileMap\TileMapComponent.cpp" />
     <ClCompile Include="Component\UIComponent.cpp" />
     <ClCompile Include="Object\Canvas.cpp" />
+    <ClCompile Include="UI\UIButton.cpp" />
     <ClCompile Include="UI\UIText.cpp" />
     <ClCompile Include="UI\UIImage.cpp" />
   </ItemGroup>
