[chore] fix folder structure

--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
@@ -176,17 +176,17 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
     <ClInclude Include="Scripts\BackGroundImage.h" />
     <ClInclude Include="Scripts\BackGroundVideo.h" />
     <ClInclude Include="Scripts\Aru.h" />
-    <ClInclude Include="Scripts\Moon.h" />
-    <ClInclude Include="Scripts\Earth.h" />
+    <ClInclude Include="Scripts\SolarScene\Moon.h" />
+    <ClInclude Include="Scripts\SolarScene\Earth.h" />
     <ClInclude Include="Scene\DemoScene2.h" />
     <ClInclude Include="Scene\DemoScene.h" />
     <ClInclude Include="DemoGameApp.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Resource.h" />
-    <ClInclude Include="Scripts\Sun.h" />
+    <ClInclude Include="Scripts\SolarScene\Sun.h" />
     <ClInclude Include="d2dengine_pch.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="Scripts\YuukaVideo.h" />
+    <ClInclude Include="Scripts\Video\YuukaVideo.h" />
     <ClInclude Include="Scripts\UI_Script.h" />
     <ClInclude Include="Scripts\Truck.h" />
     <ClInclude Include="Scene\TitleScene.h" />
@@ -213,14 +213,14 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
     <ClCompile Include="Scripts\BackGroundVideo.cpp" />
     <ClCompile Include="Scripts\Aru.cpp" />
     <ClCompile Include="Scripts\Bike\Health.cpp" />
-    <ClCompile Include="Scripts\Moon.cpp" />
-    <ClCompile Include="Scripts\Earth.cpp" />
+    <ClCompile Include="Scripts\SolarScene\Moon.cpp" />
+    <ClCompile Include="Scripts\SolarScene\Earth.cpp" />
     <ClCompile Include="Scene\DemoScene2.cpp" />
     <ClCompile Include="Scene\DemoScene.cpp" />
     <ClCompile Include="DemoGameApp.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Scripts\Sun.cpp" />
-    <ClCompile Include="Scripts\YuukaVideo.cpp" />
+    <ClCompile Include="Scripts\SolarScene\Sun.cpp" />
+    <ClCompile Include="Scripts\Video\YuukaVideo.cpp" />
     <ClCompile Include="Scripts\UI_Script.cpp" />
     <ClCompile Include="Scripts\Truck.cpp" />
     <ClCompile Include="Scene\TitleScene.cpp" />
