--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
@@ -26,6 +26,12 @@
     <Filter Include="Scripts\Widget">
       <UniqueIdentifier>{8f0c8008-cfac-4743-9c41-1b5f5fa8e323}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Scripts\SolarScene">
+      <UniqueIdentifier>{086d22b4-f7d7-49e9-a1a4-6e0721449d59}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts\Video">
+      <UniqueIdentifier>{425c74aa-3b3e-482d-ab8b-6b6092708d2c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="targetver.h">
@@ -61,23 +67,11 @@
     <ClInclude Include="Scripts\CameraController.h">
       <Filter>Scripts</Filter>
     </ClInclude>
-    <ClInclude Include="Scripts\Earth.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
     <ClInclude Include="framework.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="Scripts\Moon.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="Scripts\YuukaVideo.h">
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="Scripts\Example\ScriptExample.h">
       <Filter>Scripts\ScriptExample</Filter>
-    </ClInclude>
-    <ClInclude Include="Scripts\Sun.h">
-      <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="Scripts\Player.h">
       <Filter>Scripts</Filter>
@@ -121,6 +115,18 @@
     <ClInclude Include="Scripts\Widget\TitleWidgetScript.h">
       <Filter>Scripts\Widget</Filter>
     </ClInclude>
+    <ClInclude Include="Scripts\SolarScene\Sun.h">
+      <Filter>Scripts\SolarScene</Filter>
+    </ClInclude>
+    <ClInclude Include="Scripts\SolarScene\Moon.h">
+      <Filter>Scripts\SolarScene</Filter>
+    </ClInclude>
+    <ClInclude Include="Scripts\SolarScene\Earth.h">
+      <Filter>Scripts\SolarScene</Filter>
+    </ClInclude>
+    <ClInclude Include="Scripts\Video\YuukaVideo.h">
+      <Filter>Scripts\Video</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DemoGameApp.cpp">
@@ -148,18 +154,6 @@
       <Filter>Scripts</Filter>
     </ClCompile>
     <ClCompile Include="Scripts\CameraController.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="Scripts\Earth.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="Scripts\Moon.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="Scripts\Sun.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="Scripts\YuukaVideo.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
     <ClCompile Include="Scripts\Example\ScriptExample.cpp">
@@ -209,6 +203,18 @@
     </ClCompile>
     <ClCompile Include="Scripts\Widget\TitleWidgetScript.cpp">
       <Filter>Scripts\Widget</Filter>
+    </ClCompile>
+    <ClCompile Include="Scripts\SolarScene\Sun.cpp">
+      <Filter>Scripts\SolarScene</Filter>
+    </ClCompile>
+    <ClCompile Include="Scripts\SolarScene\Moon.cpp">
+      <Filter>Scripts\SolarScene</Filter>
+    </ClCompile>
+    <ClCompile Include="Scripts\SolarScene\Earth.cpp">
+      <Filter>Scripts\SolarScene</Filter>
+    </ClCompile>
+    <ClCompile Include="Scripts\Video\YuukaVideo.cpp">
+      <Filter>Scripts\Video</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
