[feat] Bike Movement Scipt

--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
@@ -161,6 +161,7 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Scripts\Bike\BikeMovementScript.h" />
     <ClInclude Include="Scripts\Bike\LaneController.h" />
     <ClInclude Include="Scripts\Bike\Battery.h" />
     <ClInclude Include="Scripts\Audio.h" />
@@ -194,6 +195,7 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
     <ClInclude Include="Scripts\Widget\TitleWidgetScript.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Scripts\Bike\BikeMovementScript.cpp" />
     <ClCompile Include="Scripts\Player.cpp" />
     <ClCompile Include="Scripts\Bike\LaneController.cpp" />
     <ClCompile Include="Scripts\Bike\Battery.cpp" />
