--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
@@ -163,6 +163,7 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Scripts\BackGroundRender.h" />
     <ClInclude Include="Scripts\Bike\BikeMovementScript.h" />
     <ClInclude Include="Scripts\Bike\LaneController.h" />
     <ClInclude Include="Scripts\Bike\Battery.h" />
@@ -200,6 +201,7 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
     <ClInclude Include="Scripts\Widget\TitleWidgetScript.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Scripts\BackGroundRender.cpp" />
     <ClCompile Include="Scripts\Bike\BikeMovementScript.cpp" />
     <ClCompile Include="Scripts\Player.cpp" />
     <ClCompile Include="Scripts\Bike\LaneController.cpp" />
