--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
@@ -145,6 +145,9 @@
     <ClInclude Include="Scripts\Spine2D\SpineScript.h">
       <Filter>Scripts\Spine2D</Filter>
     </ClInclude>
+    <ClInclude Include="Scripts\BackGroundRender.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DemoGameApp.cpp">
@@ -245,6 +248,9 @@
     </ClCompile>
     <ClCompile Include="Scripts\Spine2D\SpineScript.cpp">
       <Filter>Scripts\Spine2D</Filter>
+    </ClCompile>
+    <ClCompile Include="Scripts\BackGroundRender.cpp">
+      <Filter>Scripts</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
