[feat] 플레이어 카메라 이동
왜 플 레 이 어 쫒 아 가 는 걸 못 만 드 니 ? ? ?
날 속 인 거 니?

--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
@@ -164,6 +164,7 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Scripts\BackGroundRender.h" />
+    <ClInclude Include="Scripts\Camera\CameraMover.h" />
     <ClInclude Include="Scripts\Bike\BikeMovementScript.h" />
     <ClInclude Include="Scripts\Bike\LaneController.h" />
     <ClInclude Include="Scripts\Bike\Battery.h" />
@@ -202,6 +203,7 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Scripts\BackGroundRender.cpp" />
+    <ClCompile Include="Scripts\Camera\CameraMover.cpp" />
     <ClCompile Include="Scripts\Bike\BikeMovementScript.cpp" />
     <ClCompile Include="Scripts\Player.cpp" />
     <ClCompile Include="Scripts\Bike\LaneController.cpp" />
