--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
@@ -38,11 +38,14 @@
     <Filter Include="Scripts\Spine2D">
       <UniqueIdentifier>{a2ac56ab-5efd-440d-a652-1f690479b030}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Camera">
+    <Filter Include="Scripts\Camera">
       <UniqueIdentifier>{e4fd900e-08b6-42f5-8172-641535b1f65e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="GameManage">
+    <Filter Include="Scripts\GameManage">
       <UniqueIdentifier>{79079b44-802b-46b6-998c-90bb5bb158eb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Prefab">
+      <UniqueIdentifier>{e3a8234c-4eb7-4d1b-8e10-e1ad19a39c70}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -152,13 +155,16 @@
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="Scripts\Camera\CameraMover.h">
-      <Filter>Camera</Filter>
+      <Filter>Scripts\Camera</Filter>
     </ClInclude>
     <ClInclude Include="Resource.h">
       <Filter>PreCompiledHeader</Filter>
     </ClInclude>
-    <ClInclude Include="Scripts\GameManage\SpeedManager.h">
-      <Filter>GameManage</Filter>
+    <ClInclude Include="Prefab\EnemyBike.h">
+      <Filter>Prefab</Filter>
+    </ClInclude>
+    <ClInclude Include="Prefab\PlayerBike.h">
+      <Filter>PreCompiledHeader</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -265,10 +271,11 @@
       <Filter>Scripts</Filter>
     </ClCompile>
     <ClCompile Include="Scripts\Camera\CameraMover.cpp">
-      <Filter>Camera</Filter>
+      <Filter>Scripts\Camera</Filter>
     </ClCompile>
-    <ClCompile Include="Scripts\GameManage\SpeedManager.cpp">
-      <Filter>GameManage</Filter>
+    <ClCompile Include="Prefab\EnemyBike.cpp">
+      <Filter>Prefab</Filter>
     </ClCompile>
+    <ClCompile Include="Prefab\PlayerBike.cpp" />
   </ItemGroup>
 </Project>
